--- a/CH35/Entregable CSS Advanced/Página_Regístrate.html
+++ b/CH35/Entregable CSS Advanced/Página_Regístrate.html
@@ -5,23 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Regístrate</title>
     <link rel="stylesheet" href="./Styles/Registrate.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&family=Poppins&family=Quicksand:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,600&family=Quicksand:wght@500&family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="registro">
     <div class="Formulario">
         <h2>Create your account</h2>
         <form method="post">
-            <label>Email:</label>
+            <button class="btn1">Use Google <img src="" width="30px" ></button>
+            <button type="button" class="btn2">
+                Use Apple<img src="" width="50px" height="50px">
+            </button>
+            <br>
+            <h4>or</h4>
+            <div class="Email">
+                <label>Email:</label>
                 <input type="text" placeholder="Your email">
-                         
+            </div>             
             <div class="contraseña">
                 <label>Password:</label>
                 <input type="password" required placeholder="Your password">
                 
             </div>
             <input type="button" value="Login">
-            <div class="Ya tienes cuenta">
-                <a href="a">Already have an account?</a>
+            <div class="Yatienescuenta">
+                <a>Already have an account?</a>
             </div>
         </form>
 
@@ -29,7 +42,7 @@
 </div>
 
 <div class="imagen">
-    <img src="./Asstes/logohumano.png" alt="imagen humano" height="250px" width="250px">
+    <img src="./Asstes/logohumano.png" alt="imagen humano" height="505px" width="407px">
 
 </div>
 
