--- a/CH35/JavaScript_02/JavaScript2.html
+++ b/CH35/JavaScript_02/JavaScript2.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>javaScript</title>
-    
+    <title>Functions JS</title>
 </head>
 <body>
-    <script src="./Script.js"></script>
+    
+    <script src="./JavaScript2.js"></script>
 </body>
 </html>
-
