commit de prueba

--- a/CH35/JS_DOM/DOM.html
+++ b/CH35/JS_DOM/DOM.html
@@ -11,10 +11,10 @@
     <h1 class="title" id="title1">Dom Manipulation</h1>
     <h2 class="title" id="title2">JavaScript - 06</h1>
     <h3 class="title" id="title3">El dom es una API para minipular el html </h1>
-    <h3 class="title" id="title4"> Usa nodos para acceder, modificar, crear y eliminacion</h1>
+    <h3 class="title" id="title4"> Usa nodos para acceder, modificar, crear y eliminación</h1>
         
     <div id="dif"></div>
-    <a href="./pages/App.html">Vamos a App.HTML -- </a>
+    <a href="./pages/App.html">Vamos a App.HTML </a>
     <hr>
         <button id="card-btn">Mostrar / Ocultar elementos</button>
         <div class="container" id="container-div">
